--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,8 +1,40 @@
+hr {
+  margin-top: 30px;
+  transform: rotate(-45deg);
+  width: 200px;
+  height: 12px;
+}
+
+.ad-b-div {
+  margin-top: 100px;
+  margin-left: 400px;
+}
+
+.ad-b-div-1 {
+  margin-top: 50px;
+  margin-left: 300px;
+}
+
+.ad-b-div-1-1 {
+  margin-left: 300px;
+}
+
+.ad-b-div-1-2 {
+  margin-left: 320px;
+}
+
+.ab-bb-1 {
+  background-color: #483838;
+}
+.ab-bb-1:hover {
+  background-color: #42855B;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
-body {
+#body-part {
   font-family: "lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   color: #483838;
@@ -64,21 +96,21 @@ button:hover {
   padding-top: 50px;
 }
 
-.caro-button {
+.caros-button {
   margin-left: 35%;
 }
 
-.cards-wrapper {
+.cardsa-wrapper {
   display: flex;
   justify-content: center;
 }
 
-.card img {
+.carda img {
   max-width: 100%;
   max-height: 100%;
 }
 
-.card {
+.carda {
   background-color: #D2D79F;
   width: 500px;
   margin: 0 0.5em;
@@ -102,7 +134,7 @@ button:hover {
 }
 
 @media (min-width: 768px) {
-  .card img {
+  .carda img {
     height: 11em;
   }
 }
@@ -144,6 +176,19 @@ button:hover {
 .our_img {
   height: 350px;
   width: 6000px;
+}
+
+.contact_detail {
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.contact-info {
+  background-image: url(/images/contact.png);
+  background-repeat: no-repeat;
+  background-size: 100% 400px;
+  height: 800px;
 }
 
 .required:after {
@@ -190,36 +235,12 @@ button:hover {
  * More sensible default box-sizing:
  * css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice
  */
-html {
-  box-sizing: border-box;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 /* ==========================================================================
    #RESET
    ========================================================================== */
 /**
  * A very simple reset that sits on top of Normalize.css.
  */
-body,
-h1, h2, h3, h4, h5, h6,
-blockquote, p, pre,
-dl, dd, ol, ul,
-figure,
-hr,
-fieldset, legend {
-  margin: 0;
-  padding: 0;
-}
-
 /**
  * Remove trailing margins from nested lists.
  */
@@ -246,50 +267,11 @@ fieldset {
   border: 0;
 }
 
-button {
-  outline: none;
-  border: none;
-}
-
 /* ==========================================================================
    #PAGE WRAPPER
    ========================================================================== */
 .page-wrapper {
   min-height: 100vh;
-}
-
-body {
-  font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 400;
-}
-
-h1 {
-  font-size: 36px;
-}
-
-h2 {
-  font-size: 30px;
-}
-
-h3 {
-  font-size: 24px;
-}
-
-h4 {
-  font-size: 18px;
-}
-
-h5 {
-  font-size: 15px;
-}
-
-h6 {
-  font-size: 13px;
 }
 
 /* ==========================================================================
@@ -315,7 +297,7 @@ h6 {
 }
 
 .p-t-15 {
-  padding-left: 250px;
+  padding-left: 200px;
   padding-bottom: 20px;
 }
 
@@ -357,7 +339,7 @@ h6 {
 /* ==========================================================================
    #BUTTON
    ========================================================================== */
-.btn {
+.btn1 {
   display: inline-block;
   line-height: 50px;
   padding: 0 50px;
