--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,121 +1,139 @@
 <!-- frist part -->
 <section id="body-part">
-    <div class="first-p flex items-center justify-between shadow-lg">
-        <div class="first-p-text ml-40">
-            <h1 class="text-4xl">NO MORE PLASTIC</h1>
-            <h2 class="text-2xl">Help us to make surat a plstic free city</h2>
-            <p>This portal is to help you to request for plastic free certificate and to complain illegal plastic consumption anonymously Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-            <button class="text-white font-semibold py-2 px-6 hover:border-transparent rounded-full">Certificate</button>
-            <button class="text-white font-semibold py-2 px-6 ml-6 mt-8 hover:border-transparent rounded-full ">Complain</button>
-        </div>    
-        <div>
-            <img src="/images/front.png" class="mr-40">
-        </div>
+<div class="first-p flex items-center justify-between shadow-lg">
+    <div class="first-p-text ml-40">
+        <h1 class="text-4xl">NO MORE PLASTIC</h1>
+        <h2 class="text-2xl">Help Us To Make Surat A Plastic Free City</h2>
+		<br>
+        <p>This Portal Is To Help You To Request For Plastic Free Certificate And To Complain Illegal Plastic Consumption Anonymously Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <button class="text-white font-semibold py-2 px-6 hover:border-transparent rounded-full"><a href="/request-certificate" class="hover:text-white">Certificate</a></button>
+        <button class="text-white font-semibold py-2 px-6 ml-6 mt-8 hover:border-transparent rounded-full "><a href="/complain-form"  class="hover:text-white">Complain</a></button>
+    </div>    
+    <div>
+        <img src="/images/front.png" class="mr-40">
     </div>
-    
-    <!-- second part -->
-    <div class="flex items-center justify-between px-20 py-20 shadow-lg" id="second-p">
-        <div class="second-p-con pl-32">
-            <div >
-                <img src="/images/register.png" class="second-p-img mx-auto">
-            </div>
-            <div class="px-6 py-6">
-                <h1 class="text-2xl font-bold">Register request</h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-                </p>
-                <button class="text-white font-bold py-2 px-4 rounded-full my-8">
-                    Click Here
-                  </button>
-            </div>
-        </div>
-        <div class="second-p-con pr-32">
-            <div>
-                <img src="/images/trusted-seller.png" class="second-p-img mx-auto">
-            </div>
-            <div class="px-6 py-6">
-                <h1 class="text-2xl font-bold">Seller info</h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-                </p>
-                <button class="text-white font-bold py-2 px-4 rounded-full my-8">
-                    Click Here
-                  </button>
-            </div>
-        </div>
-    </div>
-    
-    
-    <!-- third part -->
-    <section id="third-part" class="px-6 py-30 shadow-lg pb-32">
-    <div class="third-p-heading"><h1 class="text-6xl ">--- Article ---</h1></div>
-    <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active ">
-            <div class="cards-wrapper">
-            <div class="card">
-              <img src="/images/1.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h1 class="card-title font-bold">India Generates 3.5 Million Tonnes Plastic Waste</h1>
-                <p class="card-text">India is generating 3.5 million tonnes of plastic waste annually, Union Environment Minister Bhupender Yadav said on Tuesday as he launched several green initiatives for plastic waste management.Speaking at the launch of mascot 'Prakriti' to spread awareness among masses about small changes that can be sustainably adopted in lifestyle for a better ...</p>
-                <div class="caro-button"><a href="https://economictimes.indiatimes.com/industry/environment/india-generates-3-5-million-tonnes-plastic-waste-annually-environment-minister/articleshow/90668558.cms"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></div></a>
-              </div>
-            </div>
-            <div class="card d-none d-md-block">
-              <img src="/images/2.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h1 class="card-title font-bold">Plastic In The Ocean</h1>
-                <p class="card-text">Twenty eighteen was the year of the plastic straw. News segments, think pieces, hot takes, and social media posts declared plastic straws public enemy number one. The story had everything: a kid on a mission against the corporate world, a gut-wrenching video of a sea turtle with a straw stuck in its nose, an easy-to-understand and ubiquitous problem....</p>
-                <div class="caro-button"><a href="https://www.worldwildlife.org/magazine/issues/fall-2019/articles/plastic-in-the-ocean"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
-              </div>
-            </div>
-            <div class="card d-none d-md-block">
-              <img src="/images/3.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h1 class="card-title font-bold">India’s plastic waste situation wasn’t created today</h1>
-                <p class="card-text">Our history makes it evident that the Indian plastics industry made a vigorous beginning in 1957. But, it took more than 30 years for it to pervade Indian lifestyles.In 1979, “the market for plastics” was just being seeded by the state-owned Indian Petro-Chemicals, and it was only in 1994 that plastic soft drink bottles became a visible source of annoyance....</p>
-                <div class="caro-button"><a href="https://www.downtoearth.org.in/blog/waste/india-s-plastic-waste-situation-wasn-t-created-today-67061"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
-              </div>
-            </div>
-          </div>
-          </div>
-          <div class="carousel-item">
-            <div class="cards-wrapper">
-              <div class="card">
-                <img src="/images/4.webp" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h1 class="card-title font-bold">India is all set to see garbage free cities</h1>
-                  <p class="card-text">One has to keep in mind the fact that the more the waste, the more you have to manage the waste. Do we want our cities to look pretty and clean or are we thinking about how efficiently we manage our waste? Zero-waste communities will mean communities taking care of their waste – whether it's through composting locally or selling the recyclables to scrap dealers...</p>
-                  <div class="caro-button"><a href="https://www.bizzbuzz.news/opinion/india-is-all-set-to-see-garbage-free-cities-1166822"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
-                </div>
-              </div>
-              <div class="card d-none d-md-block">
-                <img src="/images/5.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h1 class="card-title font-bold">To Tackle Plastic Pollution, Partnership Helps Companies See Their Role in the Problem</h1>
-                  <p class="card-text">Plastic pollution is one of the great environmental challenges of our time. It harms our natural world, our economies, and our communities, threatening terrestrial, freshwater and ocean ecosystems, and possibly human health. Plastic is nearly ubiquitous on Earth: It has been found in the deepest parts of the ocean...</p>
-                  <div class="caro-button"><a href="https://www.pewtrusts.org/en/research-and-analysis/articles/2022/09/22/to-tackle-plastic-pollution-partnership-helps-companies-see-their-role-in-the-problem"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
-                </div>
-              </div>
-              <div class="card d-none d-md-block">
-                <img src="/images/6.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h1 class="card-title font-bold">Plastic Waste Pollution</h1>
-                  <p class="card-text">Right from its discovery in 1907, plastic has played a critical role in our lives and continues to assert its presence even today. A so-called wonder product of the twentieth century, this entity is gradually choking our environment and polluting our mountain ranges and seas.Nobody knows the exact time over which plastic disintegrates;it may take up to 450 years or even more. Due to its low cost...</p>
-                  <div class="caro-button"><a href="https://www.grihaindia.org/plastic-waste-pollution"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        
-        <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-      </div>
-    </section>
-    
-    
-    </section>
+</div>
+
+<!-- second part -->
+<div class="flex items-center justify-between px-20 py-20 shadow-lg" id="second-p">
+	<div class="second-p-con pl-32">
+		<div >
+			<img src="/images/register.png" class="second-p-img mx-auto">
+		</div>
+		<div class="px-6 py-6">
+			<h1 class="text-2xl font-bold">Extra collection request</h1>
+			<!-- <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
+			</p> -->
+			<button class="text-white font-bold py-2 px-4 rounded-full my-8">
+				Click Here
+			  </button>
+		</div>
+	</div>
+	<div class="second-p-con pr-32">
+		<div>
+			<img src="/images/trusted-seller.png" class="second-p-img mx-auto">
+		</div>
+		<div class="px-6 py-6">
+			<h1 class="text-2xl font-bold">Seller info</h1>
+			<!-- <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
+			</p> -->
+			<button class="text-white font-bold py-2 px-4 rounded-full my-8"><a href="/seller-details" class="hover:text-white">
+				Click Here</a>
+			  </button>
+		</div>
+	</div>
+</div>
+
+
+<!-- third part -->
+<section id="third-part" class="px-6 py-30 shadow-lg pb-32">
+<div class="third-p-heading"><h1 class="text-6xl ">--- Articles ---</h1></div>
+<div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
+	<div class="carousel-inner">
+	  <div class="carousel-item active ">
+		<div class="cardsa-wrapper">
+		<div class="carda">
+		  <img src="/images/1.webp" class="card-img-top" alt="...">
+		  <div class="card-body">
+			<h1 class="card-title font-bold">India Generates 3.5 Million Tonnes Plastic Waste</h1>
+			<p class="card-text">India is generating 3.5 million tonnes of plastic waste annually, Union Environment Minister Bhupender Yadav said on Tuesday as he launched several green initiatives for plastic waste management.Speaking at the launch of mascot 'Prakriti' to spread awareness among masses about small changes that can be sustainably adopted in lifestyle for a better ...</p>
+			<div class="caros-button"><a href="https://economictimes.indiatimes.com/industry/environment/india-generates-3-5-million-tonnes-plastic-waste-annually-environment-minister/articleshow/90668558.cms"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></div></a>
+		  </div>
+		</div>
+		<div class="carda d-none d-md-block">
+		  <img src="/images/2.jpg" class="card-img-top" alt="...">
+		  <div class="card-body">
+			<h1 class="card-title font-bold">Plastic In The Ocean</h1>
+			<p class="card-text">Twenty eighteen was the year of the plastic straw. News segments, think pieces, hot takes, and social media posts declared plastic straws public enemy number one. The story had everything: a kid on a mission against the corporate world, a gut-wrenching video of a sea turtle with a straw stuck in its nose, an easy-to-understand and ubiquitous problem....</p>
+			<div class="caros-button"><a href="https://www.worldwildlife.org/magazine/issues/fall-2019/articles/plastic-in-the-ocean"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
+		  </div>
+		</div>
+		<div class="carda d-none d-md-block">
+		  <img src="/images/3.jpg" class="card-img-top" alt="...">
+		  <div class="card-body">
+			<h1 class="card-title font-bold">India’s plastic waste situation wasn’t created today</h1>
+			<p class="card-text">Our history makes it evident that the Indian plastics industry made a vigorous beginning in 1957. But, it took more than 30 years for it to pervade Indian lifestyles.In 1979, “the market for plastics” was just being seeded by the state-owned Indian Petro-Chemicals, and it was only in 1994 that plastic soft drink bottles became a visible source of annoyance....</p>
+			<div class="caros-button"><a href="https://www.downtoearth.org.in/blog/waste/india-s-plastic-waste-situation-wasn-t-created-today-67061"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
+		  </div>
+		</div>
+	  </div>
+	  </div>
+	  <div class="carousel-item">
+		<div class="cardsa-wrapper">
+		  <div class="carda">
+			<img src="/images/4.webp" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h1 class="card-title font-bold">India is all set to see garbage free cities</h1>
+			  <p class="card-text">One has to keep in mind the fact that the more the waste, the more you have to manage the waste. Do we want our cities to look pretty and clean or are we thinking about how efficiently we manage our waste? Zero-waste communities will mean communities taking care of their waste – whether it's through composting locally or selling the recyclables to scrap dealers...</p>
+			  <div class="caros-button"><a href="https://www.bizzbuzz.news/opinion/india-is-all-set-to-see-garbage-free-cities-1166822"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
+			</div>
+		  </div>
+		  <div class="carda d-none d-md-block">
+			<img src="/images/5.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h1 class="card-title font-bold">To Tackle Plastic Pollution, Partnership Helps Companies See Their Role in the Problem</h1>
+			  <p class="card-text">Plastic pollution is one of the great environmental challenges of our time. It harms our natural world, our economies, and our communities, threatening terrestrial, freshwater and ocean ecosystems, and possibly human health. Plastic is nearly ubiquitous on Earth: It has been found in the deepest parts of the ocean...</p>
+			  <div class="caros-button"><a href="https://www.pewtrusts.org/en/research-and-analysis/articles/2022/09/22/to-tackle-plastic-pollution-partnership-helps-companies-see-their-role-in-the-problem"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
+			</div>
+		  </div>
+		  <div class="carda d-none d-md-block">
+			<img src="/images/6.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h1 class="card-title font-bold">Plastic Waste Pollution</h1>
+			  <p class="card-text">Right from its discovery in 1907, plastic has played a critical role in our lives and continues to assert its presence even today. A so-called wonder product of the twentieth century, this entity is gradually choking our environment and polluting our mountain ranges and seas.Nobody knows the exact time over which plastic disintegrates;it may take up to 450 years or even more. Due to its low cost...</p>
+			  <div class="caros-button"><a href="https://www.grihaindia.org/plastic-waste-pollution"><button class="text-white font-bold py-2 px-4 rounded-full">Read More</button></a></div>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	
+	<button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Previous</span>
+	  </button>
+	  <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Next</span>
+	  </button>
+  </div>
+</section>
+<div>
+	<footer id="footer">
+  
+	  <a class="btn btn-primary btn-lg btn-floating footer-link-1" style="background-color: #367E18;" href="#!" role="button">
+		<i class="fab fa-instagram"></i>   </a>
+	  
+	  <a class="btn btn-primary btn-lg btn-floating footer-link-2" style="background-color: #367E18;" href="#!" role="button" >
+		<i class="fab fa-facebook"></i>   </a>
+		
+	  <a class="btn btn-primary btn-lg btn-floating footer-link-3" style="background-color: #367E18;" href="#!" role="button" >
+		<i class="fab fa-twitter"></i>   </a>
+		
+	  
+  
+	  <p style="text-align: center; padding-top: 50px; color: white;">©2022 Surat Municipal Corporation. All rights reserved.</p>
+  
+	</footer>
+
+</section>
+
