--- a/resources/views/our-mission.ejs
+++ b/resources/views/our-mission.ejs
@@ -2,7 +2,7 @@
 <div class="px-8 pb-16">
     <div class="flex pb-4">
         <div class="">
-            <img src="/img/our_m_1.jpeg" class="our_img shadow-lg">
+            <img src="/images/our_m_1.jpeg" class="our_img shadow-lg">
         </div>
         <div class="pl-8">
 
