--- a/resources/views/admin/userGeneration.ejs
+++ b/resources/views/admin/userGeneration.ejs
@@ -1,4 +1,4 @@
-<form action="/complain-form" method="POST">
+<form action="/userGeneration" method="POST">
     <div class="bg_img">
         <div class="page-wrapper bg p-t-130 p-b-100 font-poppins">
             <div class="wrapper wrapper--w680">
@@ -7,38 +7,31 @@
                         <%if(messages.error){%>
                         <span class="text-red-500 text-sm" ><%= messages.error%></span>
                         <%}%>
-                        <h2 class="title">Complain Form</h2>
+                        <h2 class="title">Generate User</h2>
                         <form action="/index" method="POST">
                             <div class="row row-space">
                                 <div class="col-2">
                                     <div class="input-group">
-                                        <label class="label required">Name</label>
-                                        <input class="input--style-4" type="text" name="Name" value="<%=messages.Name%>" placeholder="Name" required>
+                                        <label class="label required">Mail Id</label>
+                                        <input class="input--style-4" type="text" name="Mail" value="<%=messages.Mail%>" placeholder="Enter Mail Id" required>
                                     </div>
                                 </div>
                                 <div class="col-2">
                                     <div class="input-group">
-                                        <label class="label required">Address</label>
-                                        <input class="input--style-4" type="text" value="<%=messages.Address%>" name="Address" placeholder="Enter Address" required>
+                                        <label class="label required">Password</label>
+                                        <input class="input--style-4" type="text" value="<%=messages.Password%>" name="Password" placeholder="Enter Password" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="row row-space">
                                 <div class="col-2">
                                     <div class="input-group">
-                                        <label class="label">Enter Number</label>
-                                        <input class="input--style-4" type="number" name="Number" value="<%=messages.Number%>" placeholder="Enter Contact no." >
+                                        <label class="label">Role</label>
+                                        <input class="input--style-4" type="Role" name="text" value="<%=messages.Role%>" placeholder="Enter User Role" >
                                     </div>
                                 </div>
-                            <div class="col-2">
-                                    <div class="input-group">
-                                        <label class="label required">Your Complain</label>
-                                        <input class="input--style-4" type="text" name="Complain" value="<%=messages.Complain%>"placeholder="Enter Complain" required>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="p-t-15">
-                                <button class="btn1 btn--radius-2 btn--blue" type="submit">Submit</button>
+                                <button class="btn btn--radius-2 btn--blue" type="submit">Submit</button>
                             </div>
                         </form>
                     </div>
